event map overflow fix

--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -834,6 +834,7 @@
 .event-map{
   height: 200px;
   margin: 0 -20px -20px;
+  overflow: visible !important;
 }
 
 .event-image{
